feat: create, show, read message
